src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
/* ... */
.stageOptions {
  width: 250px;
  margin-left: var(--spacing-5);

  input {
    padding-left: var(--spacing-small) !important;
    padding-right: 40px !important;
  }

  [icon='warning-sign'] {
    color: var(--red-800) !important;
    position: absolute;
    left: 200px;
  }

  p {
    width: 205px;
  }
}

.repositionWarning [icon='warning-sign'] {
  position: absolute;
  left: 216px;
}

.stepOptions {
  width: 250px;
  margin-left: var(--spacing-5);
}

.expandErrorText {
  color: var(--primary-7);
  cursor: pointer;
}

.expandSearchContainer {
  margin-right: var(--spacing-xlarge) !important;
  button {
    margin-left: var(--spacing-medium);
    border-top-left-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
  }
}

